Fix scrollbar issue on load

--- a/src/Story.css
+++ b/src/Story.css
@@ -1,9 +1,9 @@
 .story-container{
     width: 35%;
-    opacity: 0;
-    transition: opacity 1s;
+    transition: display 1.5s;
     line-height: normal;
     font-family:  ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    display: none;
 }
 
 @media only screen and (max-width: 960px) {
